cci decoding working

--- a/LibCCI/LibCCI/LibCCI.vcxproj.filters
+++ b/LibCCI/LibCCI/LibCCI.vcxproj.filters
@@ -21,10 +21,27 @@
     <ClCompile Include="lz4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cciDecoder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fileSlices.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="lz4.h">
       <Filter>Header Files</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cciDecoder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="fileSlices.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dirent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
