--- a/LibCCI/LibCCI/LibCCI.vcxproj
+++ b/LibCCI/LibCCI/LibCCI.vcxproj
@@ -127,11 +127,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cciDecoder.cpp" />
+    <ClCompile Include="fileSlices.cpp" />
     <ClCompile Include="LibCCI.cpp" />
     <ClCompile Include="lz4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="lz4.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cciDecoder.h" />
+    <ClInclude Include="dirent.h" />
+    <ClInclude Include="fileSlices.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
